# genotypooler

./: README.md  __init__.py  parallel_pooling.py  requirements.txt  setup.cfg
data/: .gitignore  HDonly.coords  IMP.chr20.snps.gt.vcf.gz.csi  LDonly.coords  README.md  REF.chr20.snps.gt.vcf.gz.csi  reference.panel  study.population
examples/: .gitignore  1_interpolated_wheat_map  1_interpolated_wheat_map_plink.map  Chr1.Founders.vcf.gz.csi  Chr1.SNPs.pruned.nomiss.gl.vcf.gz.csi  Chr1.SNPs.pruned.nomiss.pooled.imputed.vcf.gz.csi  Chr1.SNPs.pruned.nomiss.pooled.vcf.gz.csi  Chr1.SNPs.pruned.nomiss.vcf.gz.csi  adaptive_gls.csv  argsfile_example.txt  beagle_magic_wheat.sh  beagle_magic_wheat_map.sh  imputation_quality.py  pooling-ex.py  pooling-imputing-ex.ipynb  quantiles_1plot.py  tablesargsfile_example.txt
examples/1KGP/: ALL.chr20.snps.gt.vcf.gz.csi  TEST.chr20.snps.gt.vcf.gz.csi  adaptive_gls.csv  beagle_pipeline.sh
examples/beagle-with-map/: Chr1.SNPs.pruned.nomiss.pooled.imputed.vcf.gz.csi  argsfile_example.txt
examples/prophaser/: Chr1.SNPs.pruned.nomiss.pooled.imputed.vcf.gz.csi  argsfile_example.txt
genotypooler/: pyproject.toml
genotypooler/graphtools/: aaf_heatmap.py  diff_eda_tables.py  diff_quantiles_plots.py  eda_tables.py  genotypes_decoding.py  genotypes_distrib_hist.py  latex_tables_decoded_imputed.py  (+4 more)
graphtools/: genotypes_decoding.py  latex_tables_decoded_imputed.py  quantiles_plots.py
persotools/: files.py
poolSNPs/: beagle_tools.py  chunkvcf.py  dataframe.py  poolvcf.py  pybcf.py  pydecoder.py  utils.py
runtools/: parallel_pooling.py
(+20 files in other folders)
