[metadata]
name = genotypooler
version = 0.1
author = Camille Clouard
author_email = camille.clouard@it.uu.se
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown


[options]
requires-python = "==3.6.15"
packages = find:
zip_safe = True
include_package_data = True
install_requires =
   pandas
   pysam == 0.17.0
   numpy < 1.20
   seaborn
   img2pdf
   numba
   scikit-learn
